test-api/scripts/deploy.yml
## 正常
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-api
  name: test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api
  template:
    metadata:
      labels:
        app: test-api
    spec:
      serviceAccountName: prometheus
      containers:
        - name: test-api
          image: 127.0.0.1:5000/test-api:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9009
---

## 直接部署到集群外
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-api
  name: test-api
  annotations:
    prometheus.io/port: '9009'
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/api/actuator/prometheus'
spec:
  type: NodePort
  ports:
    - port: 9009
      protocol: TCP
      nodePort: 32009
  selector:
    app: test-api
