test-api/scripts/ingress-testapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-testapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: www.foobar.com
      http:
        paths:
          - path: /jigsaw/(.*)
            pathType: Prefix
            backend:
              service:
                name: jigsaw
                port:
                  number: 80
          - path: /testapi/(.*)
            pathType: Prefix
            backend:
              service:
                name: testapi
                port:
                  number: 9009
